--- a/documentation/modules/ROOT/pages/index.adoc
+++ b/documentation/modules/ROOT/pages/index.adoc
@@ -18,3 +18,4 @@ A Kubernetes tutorial to show how you can deploy a Java service to a Kubernetes 
 .xref:02-deploy.adoc[Deploying]
 * xref:02-deploy.adoc#package[Package the Application]
 * xref:02-deploy.adoc#deploy[Deploy the Application]
+* xref:03-acm.adoc#deploy[Advanced Cluster Management]
