--- a/documentation/modules/ROOT/pages/03-acm.adoc
+++ b/documentation/modules/ROOT/pages/03-acm.adoc
@@ -18,7 +18,7 @@ include::example$run.sh[]
 ----
 
 [#deploy]
-== Deploy the Service
+== Deploy a Cluster
 
 And then you can deploy the service and execute commands inside:
 
